Add tags to the app.
The commit adds DB tables to support tag funcitonality.
They are also currently rendered on the index
page by journal id.  Links are dead presently.

--- a/css/style3.css
+++ b/css/style3.css
@@ -298,6 +298,21 @@ fieldset legend {
     width: 250px;
 }
 
-.tag-block {
-	color: red;
+.tag-block,
+.tag-list {
+    display: flex;
+    justify-content: center;
+}
+
+.tag-list {
+    list-style: none;
+}
+
+.tag-list li {
+    margin-right: 10px;
+    /* font-size: .75em; */
+}
+
+.tag-list li a {
+    border-bottom: none;
 }
